# C-Algo-DS-Lib

./: CMakeLists.txt  README.md
src/suffix-trie/: Suffix-Trie.c  Suffix-Trie.h
